--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-pandas==1.4.2
+pandas
 jupyter==1.0.0
 jupyter-client==7.2.2
 jupyter-console==6.4.3
 jupyter-core==4.9.2
 jupyterlab-pygments==0.2.0
 jupyterlab-widgets==1.1.0
-numpy==1.22.3
-wordtree==0.1.0
-plotly==5.7.0
-scikit-learn==1.0.2
-openpyxl==3.0.9
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-seaborn==0.11.2
+numpy
+wordtree
+plotly
+scikit-learn
+openpyxl
+matplotlib
+matplotlib-inline
+seaborn
